--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,14 +1,23 @@
 ---
 ---
+@article{XianyiHiDex,
+      title={Enhancing Dexterity in Robotic Manipulation via Hierarchical Contact Exploration}, 
+      author={Xianyi Cheng and Sarvesh Patil and Zeynep Temel and Oliver Kroemer and Matthew T. Mason},
+      year={2023},
+      selected={true},
+      html={https://arxiv.org/pdf/2307.00383.pdf},
+      pdf={HiDex.pdf},
+      preview={HiDex.gif}
+}
 
-@article{Patil2022LinearDA,
+@article{Patil2023LinearDA,
   bibtex_show={true},
   title={Linear Delta Arrays for Compliant Dexterous Distributed Manipulation},
   author={Sarvesh Patil and Tony S. Tao and Tess Lee Hellebrekers and Oliver Kroemer and Fatma Zeynep Temel},
-  booktitle={ArXiv},
-  year={2022},
+  booktitle={2023 IEEE International Conference on Robotics and Automation (ICRA)},
+  year={2023},
   selected={true},
-  html={https://arxiv.org/abs/2206.04596},
+  html={https://ieeexplore.ieee.org/document/10160578},
   pdf={delta_arrays.pdf},
   preview={delta_array.png}
 }
